--- a/style.css
+++ b/style.css
@@ -6,34 +6,7 @@
 
 }
 
-.header{
-    padding: 10px;
-    text-align: center;
-    background: rgb(120, 105, 105);
-    color: black;
-    font-size: 30px;
-    font-family: 'Times New Roman', Times, serif;
-    width: 100%;
-    height: min-content;
-    display: flex;
-    flex-direction: row;
-    /* justify-content: center; */
 
-    .logo-container{
-     display: flex;
-     flex-direction: column;
-     justify-content: center;
-
-    }
-
-    .header-content{
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-    }
-
-}
 
 
             /* h1{
@@ -45,23 +18,106 @@
             /* } */
 
 body{
-    padding: 80px;
+    padding: 60px;
     margin: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center; 
-    text-align: center;
-    background-color: rgb(218, 195, 195);
-    font-family: 'san serif'
-
-
-
-
+    text-align: center;         
+    background-color: rgb(254, 203, 165); 
+    font-family: 'san serif'; 
 
 }
 
+.width-container{
+    width: 100%;
+    height: 100%;
+    margin: auto;
+}
 
+.header{
+    /* padding: 10px; */
+     text-align: center;  
+    background: rgb(198, 161, 131);
+    color: black;
+    font-size: 30px;
+    font-family: 'Times New Roman';
+    width: 100%;
+     height: min-content; 
+    display: flex;
+    /* flex-direction: row; */
+    justify-content: center;
+}
+
+    .header-content{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+
+.logo{
+    margin: 20px;
+
+}
+
+.opennav{
+    top: 19px;
+    position: absolute;
+    left: 35px;
+}
+
+
+
+.sidenav {
+    height: 100%; 
+    width: 0; 
+    position: fixed; 
+    z-index: 1; 
+    top: 0; 
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden; 
+    padding-top: 60px; 
+    transition: 0.5s; 
+}
+      
+     
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+      
+.sidenav a:hover {
+    color: #f1f1f1;
+
+}
+      
+
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 26px;
+    /* margin-left: 50px; */
+}
+      
+
+#main {
+    transition: margin-left .5s;
+    padding: 20px;
+}
+      
+     
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+}
 
 
 .bg-image{
@@ -73,11 +129,136 @@ body{
 
 }
 
+      
+.columncontainer{
+    display: flex;
+    flex-direction: row;
+
+}
 
 
+.wrapper{
+    margin: 0;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+:root{
+    --index: calc(1vw + 1vh);
+    --transition: cubic-bezier(.1, .7, 0, 1);
+}
+
+/* body{
+    background-color: #141414;
+} */
+
+.wrapper{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+
+.items{
+    display: flex;
+    gap: 0.4rem;
+    perspective: calc(var(--index) * 35);
+}
+
+.item{
+    width: calc(var(--index) * 3);
+    height: calc(var(--index) * 12);
+    background-color: #222;
+    background-size: cover;
+    background-position: center;
+    cursor: pointer;
+    filter: grayscale(1) brightness(.7
+    );
+    transition: transform 1.25s var(--transition), filter 3s var(--transition), width 1.25s var(--transition);
+    will-change: transform, filter, rotateY, width;
+}
+
+.item::before, .item::after{
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 20px;
+    right: calc(var(--index) * -1);
+}
+
+.item::after{
+    left: calc(var(--index) * -1);
+}
+
+.items .item:hover{
+    filter: inherit;
+    transform: translateZ(calc(var(--index) * 10));
+}
+
+                /* left --> right */
+
+.items .item:hover + *{
+    filter: inherit;
+    transform: translateZ(calc(var(--index) * 8.5)) rotateY(35deg);
+    z-index: -1;
+}
+
+.items .item:hover + * + *{
+    filter: inherit;
+    transform: translateZ(calc(var(--index) * 5.6)) rotateY(40deg);
+    z-index: -2;
+}
+
+.items .item:hover + * + * + *{
+    filter: inherit;
+    transform: translateZ(calc(var(--index) * 2.5)) rotateY(30deg);
+    z-index: -3;
+}
+
+.items .item:hover + * + * + * + *{
+    filter: inherit;
+    transform: translateZ(calc(var(--index) * .6)) rotateY(15deg);
+    z-index: -4;
+}
+
+
+                /* right --> left */
+ 
+.items .item:has( + :hover){
+    filter: inherit;
+    transform: translateZ(calc(var(--index) * 8.5)) rotateY(-35deg);
+} */
+
+.items .item:has( + * + :hover){
+    filter: inherit;
+    transform: translateZ(calc(var(--index) * 5.6)) rotateY(-40deg);
+}
+
+.items .item:has( + * + * + :hover){
+    filter: inherit;
+    transform: translateZ(calc(var(--index) * 2.5)) rotateY(-30deg);
+}
+
+.items .item:has( + * + * + * + :hover){
+    filter: inherit;
+    transform: translateZ(calc(var(--index) * .6)) rotateY(-15deg);
+}
+
+.items .item:active, .items .item:focus {
+	width: 28vw;
+	filter: inherit;
+	z-index: 100;
+	transform: translateZ(calc(var(--index) * 10));
+    margin: 0 .45vw; 
+}
+
+.items > div {
+    height: 220px;
+    width: 100px;
+}
 
 .form{
-    background-color: rgb(138, 121, 121);
+    background-color: rgb(198, 161, 131);
     padding: 25px;
     box-shadow: 2 8px rgba(0,0,0, .4);
     border-radius: 33px;
@@ -86,7 +267,6 @@ body{
     align-self: center;
     align-items: center;
      
-
 }
 
 .input{
@@ -132,13 +312,31 @@ body{
     width: 100px;
     border-radius: 29;
     box-shadow: 21px;
-    background-color: rgb(120, 105, 105);
+    background-color: rgb(187, 151, 121);
     align-items: center;
-
-
 
 }
 .form button{
-    background-color: rgb(116, 93, 93);
+    background-color:rgb(161, 125, 96);
 
 }
+
+ .linkcontainer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    /* width: 350px; */
+    /* padding: 60px; */
+
+} */
+.cc2{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    /* justify-content: space-between; */
+}
+#icons{
+   font-size: 30px;
+}  
+
+
