cleaned up code, not yet done

--- a/style.css
+++ b/style.css
@@ -8,15 +8,6 @@
 
 
 
-
-            /* h1{
-            margin: 0;
-            justify-content: center;
-            text-align: center;
-            align-items: center;
-             background-color: rgb(218, 195, 195) */
-            /* } */
-
 body{
     padding: 60px;
     margin: auto;
@@ -24,15 +15,12 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center; 
-<<<<<<< HEAD
     text-align: center;         
     background-color: rgb(254, 203, 165); 
     font-family: 'san serif'; 
-=======
     text-align: center;
     background-color: rgb(218, 195, 195);
     font-family: 'san serif';
->>>>>>> ec4619848b4dde96b0d41a6d027f3ce4ba9caf7e
 
 }
 
@@ -43,21 +31,17 @@ body{
 }
 
 .header{
-    /* padding: 10px; */
+     padding: 10px; 
      text-align: center;  
-<<<<<<< HEAD
     background: rgb(198, 161, 131);
-=======
     background: rgb(120, 105, 105);
->>>>>>> ec4619848b4dde96b0d41a6d027f3ce4ba9caf7e
     color: black;
     font-size: 30px;
     font-family: 'Times New Roman';
     width: 100%;
      height: min-content; 
     display: flex;
-<<<<<<< HEAD
-    /* flex-direction: row; */
+    flex-direction: row;
     justify-content: center;
 }
 
@@ -115,7 +99,7 @@ body{
     top: 0;
     right: 25px;
     font-size: 26px;
-    /* margin-left: 50px; */
+     margin-left: 50px;
 }
       
 
@@ -128,12 +112,9 @@ body{
 @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
+
+
 }
-=======
-    flex-direction: row;
-    justify-content: center;
-}
->>>>>>> ec4619848b4dde96b0d41a6d027f3ce4ba9caf7e
 
     .header-content{
         width: 100%;
@@ -156,28 +137,24 @@ body{
 
 }
 
-<<<<<<< HEAD
       
 .columncontainer{
     display: flex;
     flex-direction: row;
 
 }
-=======
 .container1{
     display: flex;
     flex-direction: row;
     width: 100%;
     justify-content: center; 
       
->>>>>>> ec4619848b4dde96b0d41a6d027f3ce4ba9caf7e
 
 }
 .columncontainer{
     display: flex;
     flex-direction: row;
 
-<<<<<<< HEAD
 .wrapper{
     margin: 0;
     padding: 10px;
@@ -189,9 +166,9 @@ body{
     --transition: cubic-bezier(.1, .7, 0, 1);
 }
 
-/* body{
+ body{
     background-color: #141414;
-} */
+ }
 
 .wrapper{
     display: flex;
@@ -296,8 +273,6 @@ body{
 .items > div {
     height: 220px;
     width: 100px;
-=======
->>>>>>> ec4619848b4dde96b0d41a6d027f3ce4ba9caf7e
 }
 
 .form{
@@ -362,28 +337,31 @@ body{
 .form button{
     background-color:rgb(161, 125, 96);
 
-<<<<<<< HEAD
 }
 
- .linkcontainer{
+.linkcontainer{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    /* width: 350px; */
-    /* padding: 60px; */
+    width: 350px; 
+    padding: 60px; 
 
-} */
+}  
 .cc2{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    /* justify-content: space-between; */
+    justify-content: space-between;
 }
 #icons{
    font-size: 30px;
 }  
 
 
-=======
 }
->>>>>>> ec4619848b4dde96b0d41a6d027f3ce4ba9caf7e
+
+.contact-container{
+    display: flex;
+    flex-direction: row;
+
+}
